service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: haute-code-service
  name: haute-code-service
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    name: haute-code
  sessionAffinity: None
  type: LoadBalancer
