ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: haute-tls-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: haute-code-global
    networking.gke.io/managed-certificates: r2-haute-certificate,r-2www-haute-certificate
spec:
  backend:
    serviceName: haute-code-service
    servicePort: 80
